--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
-    "next": "15.3.5",
+    "next": "^16.1.6",
     "react": "^19.0.0",
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.0.0",
